Elite Swap Info based on Uniswap/uniswap-info

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Uniswap Info",
-  "name": "View statistics for Uniswap exchanges.",
+  "short_name": "Elite Swap Info",
+  "name": "View statistics for Elite Swap exchanges.",
   "icons": [
     {
       "src": "favicon.ico",
